# LostPeterOpenGLES

./: .gitignore  Build_MacOS.sh  Build_Windows.bat  LICENSE  README.md
Dependencies/Compile/: Build_MacOS_Android_lib_all.sh  Build_MacOS_Android_lib_assimp.sh  Build_MacOS_Android_lib_glad.sh  Build_MacOS_Android_lib_glfw.sh  Build_MacOS_Android_lib_glm.sh  Build_MacOS_Android_lib_imgui.sh  Build_MacOS_Android_lib_libcpuid.sh  Build_MacOS_Android_lib_libnoise.sh  Build_MacOS_Android_lib_libsquish.sh  Build_MacOS_Android_lib_rapidxml.sh  Build_MacOS_Android_lib_spdlog.sh  Build_MacOS_Android_lib_stb.sh  Build_MacOS_Android_lib_tinyxml.sh  Build_MacOS_Android_lib_zlib.sh  Build_MacOS_Android_lib_zthread.sh  Build_MacOS_Android_lib_zziplib.sh  Build_Windows_Android_lib_all.bat  Build_Windows_Android_lib_assimp.bat  Build_Windows_Android_lib_glad.bat  Build_Windows_Android_lib_glfw.bat  Build_Windows_Android_lib_glm.bat  Build_Windows_Android_lib_imgui.bat  Build_Windows_Android_lib_libcpuid.bat  Build_Windows_Android_lib_libnoise.bat  Build_Windows_Android_lib_libsquish.bat  Build_Windows_Android_lib_rapidxml.bat  Build_Windows_Android_lib_spdlog.bat  Build_Windows_Android_lib_stb.bat  Build_Windows_Android_lib_tinyxml.bat  Build_Windows_Android_lib_zlib.bat  Build_Windows_Android_lib_zthread.bat  Build_Windows_Android_lib_zziplib.bat
Dependencies/Sources/assimp-5.2.4/: CMakeLists.txt
Dependencies/Sources/glad-3.2/: CMakeLists.txt
Dependencies/Sources/glad-3.2/include/glad/: glad.h
Dependencies/Sources/glad-3.2/src/: glad.c
Dependencies/Sources/imgui-1.85/: CMakeLists.txt
Dependencies/Sources/libnoise-1.0.0/: CMakeLists.txt
Dependencies/Sources/libsquish-1.15/: CMakeLists.txt
Dependencies/Sources/zlib-1.2.11/: CMakeLists.txt
Dependencies/Sources/zziplib-0.13.72/: CMakeLists.txt
LostPeterOpenGLES/Compile/: Build_MacOS_Android_LostPeterFoundation.sh  Build_MacOS_Android_LostPeterOpenGLES.sh  Build_Windows_Android_LostPeterFoundation.bat  Build_Windows_Android_LostPeterOpenGLES.bat
LostPeterOpenGLES/LostPeterFoundation/: CMakeLists.txt
LostPeterOpenGLES/LostPeterFoundation/include/: FAABB.h  FArchive.h  FArchiveFactory.h  FArchiveFileSystem.h  FArchiveFileSystemFactory.h  FArchiveManager.h  FArchiveZip.h  FArchiveZipFactory.h  FAtomicCount.h  FBitwise.h  FBox.h  FCamera.h  FCapsule.h  FCircle.h  FCodec.h  FCodecManager.h  FComplex.h  FCone.h  FCylinder.h  FDynamicLib.h  FDynamicLibManager.h  FEquationCubic.h  FEquationQuadratic.h  FEquationQuartic.h  FFactory.h  FFileBase.h  FFileBinary.h  FFileIO.h  FFileManager.h  FFileMemory.h  FFileXML.h  FFileXMLTiny.h  FFileXMLTinyConfig.h  FFrustum.h  FIterator.h  FLog.h  FLogManager.h  FMath.h  FMeshData.h  FMeshDataLoader.h  (+45 more)
LostPeterOpenGLES/LostPeterFoundation/src/: FAABB.cpp  FArchive.cpp  FArchiveFactory.cpp  FArchiveFileSystem.cpp  FArchiveFileSystemFactory.cpp  FArchiveManager.cpp  FArchiveZip.cpp  FArchiveZipFactory.cpp  FAtomicCount.cpp  FBitwise.cpp  FBox.cpp  FCamera.cpp  FCapsule.cpp  FCircle.cpp  FCodec.cpp  FCodecManager.cpp  FComplex.cpp  FCone.cpp  FCylinder.cpp  FDynamicLib.cpp  FDynamicLibManager.cpp  FEquationCubic.cpp  FEquationQuadratic.cpp  FEquationQuartic.cpp  FFileBase.cpp  FFileBinary.cpp  FFileIO.cpp  FFileManager.cpp  FFileMemory.cpp  FFileXML.cpp  FFileXMLTiny.cpp  FFileXMLTinyConfig.cpp  FFrustum.cpp  FLog.cpp  FLogManager.cpp  FMath.cpp  FMeshData.cpp  FMeshDataLoader.cpp  FMeshGeometry.cpp  FMeshVertex.cpp  (+33 more)
LostPeterOpenGLES/LostPeterOpenGLES/: CMakeLists.txt
LostPeterOpenGLES/LostPeterOpenGLES/include/: AndroidWindow.h  App.h  Base.h  EditorBase.h  EditorCameraAxis.h  EditorCoordinateAxis.h  EditorGrid.h  EditorLineFlat2DCollector.h  EditorLineFlat3DCollector.h  GLBuffer.h  GLBufferStorage.h  GLBufferUniform.h  GLBufferVertex.h  GLBufferVertexIndex.h  GLDebug.h  GLESBuffer.h  GLESBufferStorage.h  GLESBufferUniform.h  GLESBufferVertex.h  GLESBufferVertexIndex.h  GLESDebug.h  GLESFrameBuffer.h  GLESPipelineGraphicsCopyBlitToFrame.h  GLESRenderBuffer.h  GLESRenderPass.h  GLESShader.h  GLESShaderInclude.h  GLESShaderProgram.h  GLESTexture.h  GLFrameBuffer.h  GLPipelineGraphicsCopyBlitToFrame.h  GLRenderBuffer.h  GLRenderPass.h  GLShader.h  GLShaderInclude.h  GLShaderProgram.h  GLTexture.h  Mesh.h  MeshSub.h  ObjectPool.h  (+11 more)
LostPeterOpenGLES/LostPeterOpenGLES/src/: AndroidWindow.cpp  App.cpp  Base.cpp  EditorBase.cpp  EditorCameraAxis.cpp  EditorCoordinateAxis.cpp  EditorGrid.cpp  EditorLineFlat2DCollector.cpp  EditorLineFlat3DCollector.cpp  GLBuffer.cpp  GLBufferStorage.cpp  GLBufferUniform.cpp  GLBufferVertex.cpp  GLBufferVertexIndex.cpp  GLDebug.cpp  GLESBuffer.cpp  GLESBufferStorage.cpp  GLESBufferUniform.cpp  GLESBufferVertex.cpp  GLESBufferVertexIndex.cpp  GLESDebug.cpp  GLESFrameBuffer.cpp  GLESPipelineGraphicsCopyBlitToFrame.cpp  GLESRenderBuffer.cpp  GLESRenderPass.cpp  GLESShader.cpp  GLESShaderInclude.cpp  GLESShaderProgram.cpp  GLESTexture.cpp  GLFrameBuffer.cpp  GLRenderBuffer.cpp  (+18 more)
Sample/Compile/: Build_MacOS_Android_Sample.sh  Build_MacOS_Android_Sample_All.sh  Build_MacOS_Sample.sh  Build_MacOS_Sample_All.sh  Build_Windows_Android_Sample.bat  Build_Windows_Android_Sample_All.bat  Build_Windows_Sample.bat  Build_Windows_Sample_All.bat  Clean_MacOS_Android_Sample.sh  Clean_MacOS_Android_Sample_All.sh  Clean_Windows_Android_Sample.bat  Clean_Windows_Android_Sample_All.bat  InstallRun_MacOS_Android_Sample.sh  InstallRun_MacOS_Android_Sample_All.sh  InstallRun_Windows_Android_Sample.bat  InstallRun_Windows_Android_Sample_All.bat
Sample/opengles_000_window/: settings.gradle
Sample/opengles_001_triangle/: settings.gradle
Sample/opengles_002_imgui/: settings.gradle
Sample/opengles_003_texture/: settings.gradle
Sample/opengles_004_model/: settings.gradle
Sample/opengles_005_camera/: settings.gradle
Sample/opengles_006_depth/: settings.gradle
Sample/opengles_006_depth/app/src/main/cpp/: CMakeLists.txt  main.cpp  opengles_006_depth.cpp  opengles_006_depth.h
Sample/opengles_007_stencil/: build.gradle  settings.gradle
Sample/opengles_008_blend/: settings.gradle
(+90 files in other folders)
